--- a/index.html
+++ b/index.html
@@ -193,21 +193,21 @@
                <div class="span5">
                   <h3>Contact Information</h3>
                   <p><b>Office Hours: </b>Monday-Friday (8.00am - 5.00pm)</p>
-                  <p><b>Phone: </b>999-999-9999</p>
-                  <p><b>Cell: </b>999-999-9999</p>
-                  <a href="mailto:your.email@uni.edu">Email</a>
+                  <p><b>Office Phone: </b>+91 044 22574670</p>
+                  <a href="mailto:your.email@uni.edu">advaith@iitm.ac.in</a>
                </div>
                <div class="span2">
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
                </div>
                <div class="span5">
                   <h3>Address</h3>
-                  <p>9999 Generic Research Laboratory<br>
-                     999 Fake Street Avenue<br>
-                     City, State<br>
-                     Country ZIP
+                  <p>Room No. : 140, NAC-2<br>
+                     Department of Mechanical Engineering <br>
+                     Indian Institute Of Technology Madras <br>
+                     Chennai, Tamil Nadu<br>
+                     India PIN : 600036
                   </p>
-                  <a href="http://maps.google.com/">Show Map</a>
+                  <a href="https://www.google.com/maps/place/NAC+2+rooftop/@12.9913945,80.2278101,19.75z/data=!4m6!3m5!1s0x3a5267002813dbf3:0xaf062401b0a8d7a0!8m2!3d12.991475!4d80.2278833!16s%2Fg%2F11y3zmlh5b?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">Show Map</a>
                </div>
             </div>
          </div>
