--- a/people.html
+++ b/people.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>People</title>
+      <title>People_ET5-Lab</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
       <meta name="author" content="">
@@ -14,8 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> 
+            <h1>ET5-Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
