--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,9 @@
                         <a href="https://www.google.com/maps/place/NAC+2+rooftop/@12.9913945,80.2278101,19.75z/data=!4m6!3m5!1s0x3a5267002813dbf3:0xaf062401b0a8d7a0!8m2!3d12.991475!4d80.2278833!16s%2Fg%2F11y3zmlh5b?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">Show Map</a>
                         <hr>
                         <h4>Phone</h4>
-                        <p>Office Phone: </b>+91 044 22574670</p>
-                        <a href="mailto:your.email@uni.edu">advaith@iitm.ac.in</a>
+                        <p>Office Phone: </b>4670</p>
+                        <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                         <hr>
-                        <h4>Office Hours:</h4>
-                        <p>Monday-Friday (8:00 am - 5:00 pm)</p>
                         <hr>
                         <p><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a></p>
                         <p><a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></p>
