--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Contact_ET5-Lab</title>
+      <title>Contact_ET5 Lab</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
       <meta name="author" content="">
@@ -56,7 +56,6 @@
                         <p>Office Phone: </b>4670</p>
                         <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                         <hr>
-                        <hr>
                         <p><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a></p>
                         <p><a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></p>
                         <br/>
@@ -76,20 +75,18 @@
             <div class="row-fluid">
                <div class="span5">
                   <h3>Contact Information</h3>
-                  <p><b>Office Hours: </b>Monday-Friday (8.00am - 5.00pm)</p>
-                  <p><b>Phone: </b>999-999-9999</p>
-                  <p><b>Cell: </b>999-999-9999</p>
-                  <a href="mailto:your.email@uni.edu">Email</a>
+                  <p><b>Office Phone: </b>4670</p>
+                  <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                </div>
                <div class="span2">
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
                </div>
                <div class="span5">
-                  <h3>Address</h3>
-                  <p>9999 Generic Research Laboratory<br>
-                     999 Fake Street Avenue<br>
-                     City, State<br>
-                     Country ZIP
+                  <h3>Room No. : 140, NAC-2<br>
+                           Department of Mechanical Engineering <br>
+                           Indian Institute Of Technology Madras <br>
+                           Chennai, Tamil Nadu<br>
+                           India PIN : 600036
                   </p>
                   <a href="http://maps.google.com/">Show Map</a>
                </div>
