--- a/index.html
+++ b/index.html
@@ -190,9 +190,8 @@
             <div class="row-fluid">
                <div class="span5">
                   <h3>Contact Information</h3>
-                  <p><b>Office Hours: </b>Monday-Friday (8.00am - 5.00pm)</p>
-                  <p><b>Office Phone: </b>+91 044 22574670</p>
-                  <a href="mailto:your.email@uni.edu">advaith@iitm.ac.in</a>
+                  <p><b>Office Phone: </b>4670</p>
+                  <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                </div>
                <div class="span2">
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
