--- a/contact.html
+++ b/contact.html
@@ -82,11 +82,12 @@
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
                </div>
                <div class="span5">
-                  <h3>Room No. : 140, NAC-2<br>
-                           Department of Mechanical Engineering <br>
-                           Indian Institute Of Technology Madras <br>
-                           Chennai, Tamil Nadu<br>
-                           India PIN : 600036
+                  <h3>Address</h3>
+                  <p>Room No. : 140, NAC-2<br>
+                     Department of Mechanical Engineering <br>
+                     Indian Institute Of Technology Madras <br>
+                     Chennai, Tamil Nadu<br>
+                     India PIN : 600036
                   </p>
                   <a href="http://maps.google.com/">Show Map</a>
                </div>
