--- a/research.html
+++ b/research.html
@@ -268,20 +268,19 @@
             <div class="row-fluid">
                <div class="span5">
                   <h3>Contact Information</h3>
-                  <p><b>Office Hours: </b>Monday-Friday (8.00am - 5.00pm)</p>
-                  <p><b>Phone: </b>999-999-9999</p>
-                  <p><b>Cell: </b>999-999-9999</p>
-                  <a href="mailto:your.email@uni.edu">Email</a>
+                  <p><b>Office Phone: </b>4670</p>
+                  <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                </div>
                <div class="span2">
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
                </div>
                <div class="span5">
                   <h3>Address</h3>
-                  <p>9999 Generic Research Laboratory<br>
-                     999 Fake Street Avenue<br>
-                     City, State<br>
-                     Country ZIP
+                  <p>Room No. : 140, NAC-2<br>
+                     Department of Mechanical Engineering <br>
+                     Indian Institute Of Technology Madras <br>
+                     Chennai, Tamil Nadu<br>
+                     India PIN : 600036
                   </p>
                   <a href="http://maps.google.com/">Show Map</a>
                </div>
