--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> 
-            <h1>ET5-Lab</h1>
+            <h1>ET5 Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
@@ -50,17 +50,18 @@
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="thumbs/prof-photo2.jpg" alt="Joe Smith"/>
+                        <img src="people/advaith.png" alt="Advaith Sankar"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Joe Smith</h4>
-                        <p>Assistant Professor of Science and Engineering</p>
-                        <p>Ph.D. in Mechanical Engineering, Lorem Ipsum, 2013<br/>M.S. in Mechanical Engineering, HRV, 2011<br/>BASc in Engineering, University of Lorem Ipsum, 2009</p>
-                        <p><b>Phone: </b>(999) 999-9999 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">your.email@uni.edu</a></p>
+                        <h4>Advaith Sankar</h4>
+                        <p>Assistant Professor</p>
+                        <p>Ph.D. in Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
+Indian Institute of Technology, Guwahati, 2013<br/></p>
+                        <p><b>Office Phone: </b>4670 </p>
+                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a></p>
                         <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                        <p><b><a href="https://www.myperfectcv.co.uk/cv-examples/chemistry-lab-technician-cv-sample">CV</a>, <a href="http://scholar.google.com">Google Scholar</a>, <a href="https://www.linkedin.com">Linkedin</a>, <a href="http://www.researchgate.net">ResearchGate</a></b></p>
+                        <p><b><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.linkedin.com/in/advaithsankar/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></b></p>
                      </div>
                   </div>
                </section>
@@ -222,7 +223,7 @@
                <div class="span5">
                   <h3>Contact Information</h3>
                   <p><b>Office Phone: </b>4670</p>
-                  <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
+                  <a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a>
                </div>
                <div class="span2">
                   <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
