--- a/people.html
+++ b/people.html
@@ -38,6 +38,7 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#principalinvestigator"> Principal Investigator </a></li>
+                  <li><a href="#phd">Ph.D</a></li>
                   <li><a href="#graduate">Graduate Students</a></li>
                   <li><a href="#undergraduate">Undergraduate Students</a></li>
                </ul>
@@ -66,6 +67,31 @@ Indian Institute of Technology, Guwahati, 2013<br/></p>
                   </div>
                </section>
                <hr>
+
+               <section id="phd">
+                  <div class="page-header">
+                     <h3>Ph.D</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                        <img src="people/advaith.png" alt="Advaith Sankar"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Advaith Sankar</h4>
+                        <p>Assistant Professor</p>
+                        <p>Ph.D. in Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
+Indian Institute of Technology, Guwahati, 2013<br/></p>
+                        <p><b>Office Phone: </b>4670 </p>
+                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a></p>
+                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
+                        <p><b><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.linkedin.com/in/advaithsankar/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></b></p>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               
                <section id="graduate">
                   <div class="page-header">
                      <h3>Graduate Students</h3>
