--- a/people.html
+++ b/people.html
@@ -57,11 +57,11 @@
                      <div class="span9">
                         <h4>Advaith Sankar</h4>
                         <p>Assistant Professor</p>
-                        <p>Ph.D. in Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
-Indian Institute of Technology, Guwahati, 2013<br/></p>
+                        <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
+<br/>Indian Institute of Technology, Guwahati, 2013<br/></p>
                         <p><b>Office Phone: </b>4670 </p>
                         <p><b>Email: </b><a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
+                        <p><b>Address: </b>Room No. : 140, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
                         <p><b><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.linkedin.com/in/advaithsankar/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></b></p>
                      </div>
                   </div>
@@ -79,14 +79,13 @@ Indian Institute of Technology, Guwahati, 2013<br/></p>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Advaith Sankar</h4>
-                        <p>Assistant Professor</p>
-                        <p>Ph.D. in Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
-Indian Institute of Technology, Guwahati, 2013<br/></p>
+                        <h4>Thilagan K</h4>
+                        <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Technology Madras (IIT-M) Chennai, 2025<br/>M.S. (By Research) in Mechanical Engineering, 
+<br/>College of Engineering Guindy, Anna University, Chennai, 2017<br/> B.E in Mechanical Engineering, <br/>Sri Venkateswara College of Engineering, Sriperumbudur, 2014</p>
                         <p><b>Office Phone: </b>4670 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                        <p><b><a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.linkedin.com/in/advaithsankar/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Advaith-S">ResearchGate</a></b></p>
+                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">me17d045@smail.iitm.acin</a></p>
+                        <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                        <p><b><a href="https://scholar.google.com/citations?user=5lldYecAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/thilagan-k/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Thilagan-Kannappan?ev=hdr_xprf">ResearchGate</a></b></p>
                      </div>
                   </div>
                </section>
