--- a/people.html
+++ b/people.html
@@ -75,7 +75,7 @@
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="people/thilagan.jpeg" alt="Thilagan K"/>
+                        <img src="people/thilagan.JPEG" alt="Thilagan K"/>
                         </a>
                      </div>
                      <div class="span9">
