--- a/people.html
+++ b/people.html
@@ -99,7 +99,7 @@
                         <p><b>Office Phone: </b>5723 </p>
                         <p><b>Email: </b><a href="mailto:your.email@uni.edu">me19d029@smail.iitm.ac.in</a></p>
                         <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                        <p><b><a href=" ">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
+                        <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
                      </div>
                   </div>
                </section>
