--- a/people.html
+++ b/people.html
@@ -90,7 +90,7 @@
                                     <div class="row-fluid">
                      <div class="span3">
                         <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="people/vijayakumar.jpeg" alt="Vijayakumar S"/>
+                        <img src="people/vijayakumar.jpg" alt="Vijayakumar S"/>
                         </a>
                      </div>
                      <div class="span9">
