--- a/people.html
+++ b/people.html
@@ -39,6 +39,7 @@
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#principalinvestigator"> Principal Investigator </a></li>
                   <li><a href="#phd">Ph.D</a></li>
+                  <li><a class="subhead" href="#Alumni"> Alumni </a></li>
                   <li><a href="#graduate">Graduate Students</a></li>
                   <li><a href="#undergraduate">Undergraduate Students</a></li>
                </ul>
@@ -74,9 +75,11 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="people/thilagan.JPEG" alt="Thilagan K"/>
-                        </a>
+                        <section id="Penatibus">
+                           <h4>Penatibus</h4>   <br/>
+                              <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                              <img src="people/thilagan.JPEG" alt="Thilagan K"/>
+                              </a>
                      </div>
                      <div class="span9">
                         <h4>Thilagan K</h4>
@@ -87,6 +90,7 @@
                         <p><b><a href="https://scholar.google.com/citations?user=5lldYecAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/thilagan-k/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Thilagan-Kannappan?ev=hdr_xprf">ResearchGate</a></b></p>
                      </div>
                   </div>
+                  
                                     <div class="row-fluid">
                      <div class="span3">
                         <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
@@ -99,7 +103,7 @@
                         <p><b>Office Phone: </b>5723 </p>
                         <p><b>Email: </b><a href="mailto:your.email@uni.edu">me19d029@smail.iitm.ac.in</a></p>
                         <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                        <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
+                        <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a></b></p>
                      </div>
                   </div>
                </section>
