--- a/people.html
+++ b/people.html
@@ -80,9 +80,11 @@
                         <section id="Alumni">
                            <h4>Alumni</h4>
                            <br/>
+                           <div class="span3">
                            <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
                               <img src="people/thilagan.JPEG" alt="Thilagan K"/>
                               </a>
+                           </div>
                            <div class="span9">
                               <h4>Thilagan K</h4>
                               <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Technology Madras (IIT-M) Chennai, 2025<br/>M.S. (By Research) in Mechanical Engineering, <br/>College of Engineering Guindy, Anna University, Chennai, 2017<br/> B.E in Mechanical Engineering, <br/>Sri Venkateswara College of Engineering, Sriperumbudur, 2014</p>
