--- a/people.html
+++ b/people.html
@@ -79,6 +79,7 @@
                      <div class="span12">
                         <section id="Alumni">
                            <h4>Alumni</h4>
+                        <div class="row-fluid">
                            <div class="span3">
                            <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
                               <img src="people/thilagan.JPEG" alt="Thilagan K"/>
@@ -92,6 +93,7 @@
                               <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
                               <p><b><a href="https://scholar.google.com/citations?user=5lldYecAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/thilagan-k/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Thilagan-Kannappan?ev=hdr_xprf">ResearchGate</a></b></p>
                         </div>
+                           </div>
                         </section>
                         <hr>
                      </div>
