--- a/people.html
+++ b/people.html
@@ -59,8 +59,7 @@
                      <div class="span9">
                         <h4>Advaith Sankar</h4>
                         <p>Assistant Professor</p>
-                        <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, 
-<br/>Indian Institute of Technology, Guwahati, 2013<br/></p>
+                        <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Science (IISc) Bangalore, 2020<br/>B.Tech. in Mechanical Engineering, <br/>Indian Institute of Technology, Guwahati, 2013<br/></p>
                         <p><b>Office Phone: </b>4670 </p>
                         <p><b>Email: </b><a href="mailto:your.email@uni.edu">advaith[at]iitm[.]ac[.]in</a></p>
                         <p><b>Address: </b>Room No. : 140, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
@@ -94,6 +93,22 @@
                         <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a></b></p>
                         </div>
                            </div>
+
+                                                  <div class="row-fluid">
+                           <div class="span3">
+                           <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                              <img src="people/durga.jpeg" alt="Durga Prasad Pydi"/>
+                              </a>
+                           </div>
+                           <div class="span9">
+                              <h4>Durga Prasad Pydi</h4>
+                        <p>B.E in Mechanical Engineering, <br/>Indian Institute of Technology Madras, Chennai, 2020</p>
+                        <p><b>Office Phone: </b>5722 </p>
+                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">me22d400@smail.iitm.ac.in</a></p>
+                        <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                        <p><b><a href=" ">Google Scholar</a>, <a href=" ">Linkedin</a></b></p>
+                        </div>
+                           </div> 
                         </section>
                         <hr>
                      </div>
@@ -111,7 +126,7 @@
                               </a>
                            </div>
                            <div class="span9">
-                              <h4>Thilagan K</h4>
+                              <h4>Dr. Thilagan K</h4>
                               <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Technology Madras (IIT-M) Chennai, 2025<br/>M.S. (By Research) in Mechanical Engineering, <br/>College of Engineering Guindy, Anna University, Chennai, 2017<br/> B.E in Mechanical Engineering, <br/>Sri Venkateswara College of Engineering, Sriperumbudur, 2014</p>
                               <p><b>Office Phone: </b>4670 </p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me17d045@smail.iitm.ac.in</a></p>
