--- a/people.html
+++ b/people.html
@@ -105,7 +105,7 @@
                               <p>B.E in Mechanical Engineering, <br/>---</p>                        
                               <p>M.Tech in Thermal Power Engineering, <br/>National Institute of Technology, Tiruchirappalli, 2019</p>
                               <p><b>Office Phone: </b>5722 </p>
-                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me22d400@smail.iitm.ac.in</a></p>
+                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me21d018@smail.iitm.ac.in</a></p>
                               <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
                               <p><b><a href=" ">Google Scholar</a>, <a href="https://www.linkedin.com/in/jawahar-prakash-618629131/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
                            </div>
@@ -119,13 +119,29 @@
                            </div>
                            <div class="span9">
                               <h4>Durga Prasad Pydi</h4>
-                        <p>B.E in Mechanical Engineering, <br/>Indian Institute of Technology Madras, Chennai, 2020</p>
-                        <p><b>Office Phone: </b>5722 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">me22d400@smail.iitm.ac.in</a></p>
-                        <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                        <p><b><a href="https://scholar.google.com/citations?hl=en&user=ybH9NKkAAAAJ">Google Scholar</a>, <a href="https://www.linkedin.com/in/durga-prasad-9715b2129/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Durga-Pydi-2/research">ResearchGate</a></b></p>
-                        </div>
+                              <p>B.E in Mechanical Engineering, <br/>Indian Institute of Technology Madras, Chennai, 2020</p>
+                              <p><b>Office Phone: </b>5722 </p>
+                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me22d400@smail.iitm.ac.in</a></p>
+                              <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                              <p><b><a href="https://scholar.google.com/citations?hl=en&user=ybH9NKkAAAAJ">Google Scholar</a>, <a href="https://www.linkedin.com/in/durga-prasad-9715b2129/">Linkedin</a>, <a href="https://www.researchgate.net/profile/Durga-Pydi-2/research">ResearchGate</a></b></p>
+                           </div>
                            </div> 
+
+                           <div class="row-fluid">
+                           <div class="span3">
+                           <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                              <img src="people/suparna.jpeg" alt="Suparna Dhara"/>
+                              </a>
+                           </div>
+                           <div class="span9">
+                              <h4>Suparna Dhara</h4>
+                              <p>M.Tech in Thermal Power Engineering, <br/> Ghani Khan Choudhury Institute of Engineering and Technology, Malda, 2024</p>
+                              <p><b>Office Phone: </b>5722 </p>
+                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me24d000@smail.iitm.ac.in</a></p>
+                              <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                              <p><b><a href=" ">Google Scholar</a>, <a href="https://www.linkedin.com/in/suparna-dhara-90b818321/?originalSubdomain=in/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
+                           </div>
+                           </div                           
                         </section>
                         <hr>
                      </div>
