--- a/people.html
+++ b/people.html
@@ -135,7 +135,7 @@
                            </div>
                            <div class="span9">
                               <h4>Suparna Dhara</h4>
-                              <p>M.Tech in Thermal Power Engineering, <br/> Ghani Khan Choudhury Institute of Engineering and Technology, Malda, 2024</p>
+                              <p>B.Tech in Mechanical Engineering, <br/> Ghani Khan Choudhury Institute of Engineering and Technology, Malda, 2024</p>
                               <p><b>Office Phone: </b>5722 </p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me24d000@smail.iitm.ac.in</a></p>
                               <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
