--- a/people.html
+++ b/people.html
@@ -42,8 +42,8 @@
                   <li><a class="subhead" href="#Ongoing"> Ongoing </a></li>
                   <li><a class="subhead" href="#Alumni"> Alumni </a></li>
                   <li><a href="#ms">M.S</a></li>
-                  <li><a class="subhead" href="#Ongoing"> Ongoing </a></li>
-                  <li><a class="subhead" href="#Alumni"> Alumni </a></li>
+                  <li><a class="subhead" href="#Ongoing_ms"> Ongoing </a></li>
+                  <li><a class="subhead" href="#Alumni_ms"> Alumni </a></li>
                   <li><a href="#graduate">Graduate Students</a></li>
                   <li><a href="#undergraduate">Undergraduate Students</a></li>
                </ul>
