--- a/people.html
+++ b/people.html
@@ -81,20 +81,20 @@
                      <div class="span12">
                         <section id="Ongoing">
                            <h4>Ongoing</h4>
-                        <div class="row-fluid">
-                           <div class="span3">
-                           <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                              <img src="people/vijayakumar.jpg" alt="Vijayakumar S"/>
-                              </a>
-                           </div>
+                           <div class="row-fluid">
+                              <div class="span3">
+                                 <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                                    <img src="people/vijayakumar.jpg" alt="Vijayakumar S"/>
+                                 </a>
+                              </div>
                            <div class="span9">
                               <h4>Vijayakumar S</h4>
-                        <p>M.E in Mechanical Engineering, <br/>S.N.S College of Technology, Coimbatore, 2015<br/> B.E in Mechanical Engineering, <br/>Dr. Mahalingam College of Engineering and Technology, Pollachi, 2011</p>
-                        <p><b>Office Phone: </b>5723 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">me19d029@smail.iitm.ac.in</a></p>
-                        <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                        <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a></b></p>
-                        </div>
+                              <p>M.E in Mechanical Engineering, <br/>S.N.S College of Technology, Coimbatore, 2015<br/> B.E in Mechanical Engineering, <br/>Dr. Mahalingam College of Engineering and Technology, Pollachi, 2011</p>
+                              <p><b>Office Phone: </b>5723 </p>
+                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me19d029@smail.iitm.ac.in</a></p>
+                              <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                              <p><b><a href="https://scholar.google.co.in/citations?user=ncY-H_UAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/vijayakumar-s-7362182ab/">Linkedin</a></b></p>
+                           </div>
                            </div>
                            
                            <div class="row-fluid">
@@ -183,7 +183,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="Ongoing">
+                        <section id="Ongoing_ms">
                            <h4>Ongoing</h4>                           
                            <div class="row-fluid">
                            <div class="span3">
@@ -208,7 +208,7 @@
                   
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="Alumni">
+                        <section id="Alumni_ms">
                            <h4>Alumni</h4>
                         <div class="row-fluid">
                            <div class="span3">
