--- a/people.html
+++ b/people.html
@@ -184,7 +184,22 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="Ongoing_ms">
-                           <h4>Ongoing</h4>                           
+                           <h4>Ongoing</h4> 
+                           <div class="row-fluid">
+                           <div class="span3">
+                           <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
+                              <img src="people/sachin.jpg" alt="Sachin Angad Kharsade"/>
+                              </a>
+                           </div>
+                           <div class="span9">
+                              <h4>Sachin Angad Kharsade</h4>                     
+                              <p>B.E in Mechanical Engineering, <br/>Dr. D.Y. Patil Institute of Engineering, Management and Research, Pune, 2019</p>
+                              <p><b>Email: </b><a href="mailto:your.email@uni.edu">me21s025@smail.iitm.ac.in</a></p>
+                              <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
+                              <p><b><a href="https://www.linkedin.com/in/sachin-angad-kharsade-53a7bb169/</a></b></p>
+                           </div>
+                           </div> 
+                           
                            <div class="row-fluid">
                            <div class="span3">
                            <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
@@ -193,7 +208,7 @@
                            </div>
                            <div class="span9">
                               <h4>Amit kumar Goswami</h4>                     
-                              <p>B.Tech in Mechanical Engineering, <\br>Dream Institute of Technology, Kolkata, 2016</p>
+                              <p>B.Tech in Mechanical Engineering, </br>Dream Institute of Technology, Kolkata, 2016</p>
                               <p><b>Office Phone: </b>5722 </p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me22s008@smail.iitm.ac.in</a></p>
                               <p><b>Address: </b>Room No. : 106, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
