--- a/people.html
+++ b/people.html
@@ -192,11 +192,11 @@
                               </a>
                            </div>
                            <div class="span9">
-                              <h4>Sachin Angad Kharsade</h4>                     
+                              <h4>Sachin Angad Kharsade</h4>
                               <p>B.E in Mechanical Engineering, <br/>Dr. D.Y. Patil Institute of Engineering, Management and Research, Pune, 2019</p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me21s025@smail.iitm.ac.in</a></p>
                               <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                              <p><b><a href="https://www.linkedin.com/in/sachin-angad-kharsade-53a7bb169/</a></b></p>
+                              <p><b><a href=" ">Google Scholar</a>, <a href="https://www.linkedin.com/in/jawahar-prakash-618629131/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
                            </div>
                            </div> 
                            
