--- a/people.html
+++ b/people.html
@@ -142,7 +142,7 @@
                               <p><b>Office Phone: </b>5722 </p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me24d000@smail.iitm.ac.in</a></p>
                               <p><b>Address: </b>Room No. : 221, NAC-2, Department of Mechanical Engineering, Indian Institute of Technology Madras, Chennai, India PIN CODE: 600036</p>
-                              <p><b><a href=" ">Google Scholar</a>, <a href="https://www.linkedin.com/in/suparna-dhara-90b818321/?originalSubdomain=in/">Linkedin</a>, <a href=" ">ResearchGate</a></b></p>
+                              <p><b><a href="https://www.linkedin.com/in/sachin-angad-kharsade-53a7bb169/">Linkedin</a></b></p>
                            </div>
                            </div                           
                         </section>
