--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,7 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#published"> Journal Publications</a></li>
+                  <li><a class="subhead" href="#2025"> 2025 </a></li>
                   <li><a class="subhead" href="#2018"> 2018 </a></li>
                   <li><a class="subhead" href="#2017"> 2017 </a></li>
                   <li><a class="subhead" href="#2016"> 2016 </a></li>
@@ -53,6 +54,39 @@
                   <div class="page-header">
                      <h3>Journal Publications</h3>
                   </div>
+                  
+                  <section id="2025">
+                     <h3>2025</h3>
+                     <br/>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/solar-compass" class="thumbnail">
+                           <img class="publications-thumb" src="publication/Solar compass.jpg" alt="Simulation solar MED system"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Simulation studies and experimental validation on solar multi - effect desalination system</h4>
+                           <br/>
+                           <p>Thilagan K., Advaith S., Mani. A</p>
+                           <a href="https://doi.org/10.1016/j.solcom.2025.100110">Solar Compass, Volume 13, March 2025, 100110</a>
+                        </div>
+                     </div>
+                     <hr>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/thermal-science-and-engineering-progress" class="thumbnail">
+                           <img class="publications-thumb" src="publication/ancac3.2013.7.issue-12.largecover.jpg" alt="Experimental insights on PHX"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Experimental insights into heat transfer and pressure drop: A comparative study of copper spray coated and plain corrugated gasket plate heat exchangers</h4>
+                           <br/>
+                           <p>Vijayakumar S., Advaith S., Mani A.</p>
+                           <a href="https://doi.org/10.1016/j.tsep.2024.103070">Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</a>
+                        </div>
+                     </div>
+                  </section>
+                  
                   <section id="2018">
                      <h3>2018</h3>
                      <br/>
