--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
                      <div class="row-fluid">
                         <div class="span3">
                            <a href="https://www.sciencedirect.com/journal/thermal-science-and-engineering-progress" class="thumbnail">
-                           <img class="publications-thumb" src="publication/ancac3.2013.7.issue-12.largecover.jpg" alt="Experimental insights on PHX"/>
+                           <img class="publications-thumb" src="TSEP.jpg" alt="Experimental insights on PHX"/>
                            </a>
                         </div>
                         <div class="span9">
@@ -86,6 +86,7 @@
                         </div>
                      </div>
                   </section>
+                  <hr>
                   
                   <section id="2018">
                      <h3>2018</h3>
