--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,8 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#published"> Journal Publications</a></li>
-                  <li><a class="subhead" href="#2025"> 2025 </a></li>
+                  <li><a class="subhead" href="#2025"> 2025 </a></li> 
+                  <li><a class="subhead" href="#2024"> 2024 </a></li>                  
                   <li><a class="subhead" href="#2018"> 2018 </a></li>
                   <li><a class="subhead" href="#2017"> 2017 </a></li>
                   <li><a class="subhead" href="#2016"> 2016 </a></li>
@@ -71,11 +72,17 @@
                            <a href="https://doi.org/10.1016/j.solcom.2025.100110">Solar Compass, Volume 13, March 2025, 100110</a>
                         </div>
                      </div>
-                     <hr>
+                  </section>
+                  <hr>
+
+
+                  <section id="2024">
+                     <h3>2024</h3>
+                     <br/>
                      <div class="row-fluid">
                         <div class="span3">
                            <a href="https://www.sciencedirect.com/journal/thermal-science-and-engineering-progress" class="thumbnail">
-                           <img class="publications-thumb" src="TSEP.jpg" alt="Experimental insights on PHX"/>
+                           <img class="publications-thumb" src="publication/TSEP.jpg" alt="Experimental insights on PHX"/>
                            </a>
                         </div>
                         <div class="span9">
@@ -83,6 +90,19 @@
                            <br/>
                            <p>Vijayakumar S., Advaith S., Mani A.</p>
                            <a href="https://doi.org/10.1016/j.tsep.2024.103070">Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</a>
+                        </div>
+                     </div>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/solar-energy" class="thumbnail">
+                           <img class="publications-thumb" src="publication/solar energy.jpg" alt="solar cold storage system"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Development and performance evaluation of solar absorption cold storage system for tropical climates</h4>
+                           <br/>
+                           <p>Vijayakumar S., Mani A., Advaith S.</p>
+                           <a href="https://doi.org/10.1016/j.solener.2024.112822">Solar Energy, Volume 279, 1 September 2024, 112822</a>
                         </div>
                      </div>
                   </section>
