--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,8 @@
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#published"> Journal Publications</a></li>
                   <li><a class="subhead" href="#2025"> 2025 </a></li> 
-                  <li><a class="subhead" href="#2024"> 2024 </a></li>                  
+                  <li><a class="subhead" href="#2024"> 2024 </a></li>  
+                  <li><a class="subhead" href="#2023"> 2023 </a></li>                  
                   <li><a class="subhead" href="#2018"> 2018 </a></li>
                   <li><a class="subhead" href="#2017"> 2017 </a></li>
                   <li><a class="subhead" href="#2016"> 2016 </a></li>
@@ -92,6 +93,7 @@
                            <a href="https://doi.org/10.1016/j.tsep.2024.103070">Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</a>
                         </div>
                      </div>
+                      <hr>
                      <div class="row-fluid">
                         <div class="span3">
                            <a href="https://www.sciencedirect.com/journal/solar-energy" class="thumbnail">
@@ -105,8 +107,42 @@
                            <a href="https://doi.org/10.1016/j.solener.2024.112822">Solar Energy, Volume 279, 1 September 2024, 112822</a>
                         </div>
                      </div>
+                     <hr>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/applied-thermal-engineering" class="thumbnail">
+                           <img class="publications-thumb" src="publication/ate.jpg" alt="metal-foam PHX"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Investigation of heat transfer and pressure drop characteristics in metal-foam filled channels in a plate heat exchanger: A comparative experimental study</h4>
+                           <br/>
+                           <p>Naresh Chandora, Mani A., Advaith S.</p>
+                           <a href="https://doi.org/10.1016/j.applthermaleng.2024.122368">Applied Thermal Engineering, Volume 241, 15 March 2024, 122368</a>
+                        </div>
+                     </div>
                   </section>
-                  <hr>
+                  <hr>        
+
+
+                  <section id="2023">
+                     <h3>2023</h3>
+                     <br/>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://www.sciencedirect.com/journal/energy-and-ai" class="thumbnail">
+                           <img class="publications-thumb" src="Energy AI.jpg" alt="boosted autoencoder for building"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Attention boosted autoencoder for building energy anomaly detection</h4>
+                           <br/>
+                           <p>Vijayakumar S., Advaith S., Mani A.</p>
+                           <a href="https://doi.org/10.1016/j.egyai.2023.100292">Energy and AI, Volume 14, October 2023, 100292</a>
+                        </div>
+                     </div>
+                  </section>
+                  <hr>   
                   
                   <section id="2018">
                      <h3>2018</h3>
