--- a/publications.html
+++ b/publications.html
@@ -131,7 +131,7 @@
                      <div class="row-fluid">
                         <div class="span3">
                            <a href="https://www.sciencedirect.com/journal/energy-and-ai" class="thumbnail">
-                           <img class="publications-thumb" src="Energy AI.jpg" alt="boosted autoencoder for building"/>
+                           <img class="publications-thumb" src="publication/Energy AI.jpg" alt="boosted autoencoder for building"/>
                            </a>
                         </div>
                         <div class="span9">
