--- a/publications.html
+++ b/publications.html
@@ -100,7 +100,7 @@
                         <div class="span9">
                            <h4>Development and performance evaluation of solar absorption cold storage system for tropical climates</h4>
                            <br/>
-                           <p>Vijayakumar S., Mani A., Advaith S.</p>
+                           <p>Durga Prasad Pydi, Advaith S.</p>
                            <a href="https://doi.org/10.1016/j.solener.2024.112822">Solar Energy, Volume 279, 1 September 2024, 112822</a>
                         </div>
                      </div>
