--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,6 @@
                   </section>
                   <hr>
 
-
                   <section id="2024">
                      <h3>2024</h3>
                      <br/>
@@ -119,7 +118,6 @@
                   </section>
                   <hr>        
 
-
                   <section id="2023">
                      <h3>2023</h3>
                      <br/>
@@ -134,6 +132,33 @@
                            <br/>
                            <p>Vijayakumar S., Advaith S., Mani A.</p>
                            <a href="https://doi.org/10.1016/j.egyai.2023.100292">Energy and AI, Volume 14, October 2023, 100292</a>
+                        </div>
+                     </div>
+                  </section>
+                  <hr>  
+            </div>
+
+
+            <div class="span8 offset1">
+               <section id="published">
+                  <div class="page-header">
+                     <h3>Conference Presentation</h3>
+                  </div>
+
+                  <section id="2024_conf">
+                     <h3>2024</h3>
+                     <br/>
+                     <div class="row-fluid">
+                        <div class="span3">
+                           <a href="https://ge.iitm.ac.in/ncrac-2024/" class="thumbnail">
+                           <img class="publications-thumb" src="conference/ncrac2024.png" alt="NCRAC2024"/>
+                           </a>
+                        </div>
+                        <div class="span9">
+                           <h4>Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari</h4>
+                           <br/>
+                           <p>Thilagan K., Advaith S., Mani A.</p>
+                           <a href="https://doi.org/10.1016/j.egyai.2023.100292">8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
                         </div>
                      </div>
                   </section>
