--- a/publications.html
+++ b/publications.html
@@ -139,12 +139,12 @@
             </div>
 
 
-            <div class="span8 offset1">
-               <section id="published">
+            <div class="span8 offset2">
+               <section id="conference">
                   <div class="page-header">
                      <h3>Conference Presentation</h3>
                   </div>
-
+                  
                   <section id="2024_conf">
                      <h3>2024</h3>
                      <br/>
@@ -157,13 +157,18 @@
                         <div class="span9">
                            <h4>Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari</h4>
                            <br/>
-                           <p>Thilagan K., Advaith S., Mani A.</p>
-                           <a href="https://doi.org/10.1016/j.egyai.2023.100292">8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
+                           <p>Thilagan K., Advaith S., Mani. A</p>
+                           <a>8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
                         </div>
                      </div>
                   </section>
-                  <hr>  
+                  <hr> 
             </div>
+
+
+
+            
+
 
 
       </div>
