--- a/publications.html
+++ b/publications.html
@@ -139,7 +139,7 @@
             </div>
 
 
-            <div class="span8 offset2">
+
                <section id="conference">
                   <div class="page-header">
                      <h3>Conference Presentation</h3>
@@ -158,12 +158,12 @@
                            <h4>Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari</h4>
                            <br/>
                            <p>Thilagan K., Advaith S., Mani. A</p>
-                           <a>8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
+                           <a href="https://ge.iitm.ac.in/ncrac-2024/">8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
                         </div>
                      </div>
                   </section>
                   <hr> 
-            </div>
+
 
 
 
