--- a/publications.html
+++ b/publications.html
@@ -139,7 +139,7 @@
             </div>
 
 
-
+         <div class="row-fluid">
                <section id="conference">
                   <div class="page-header">
                      <h3>Conference Presentation</h3>
@@ -163,6 +163,9 @@
                      </div>
                   </section>
                   <hr> 
+               </section> 
+         </div>
+                  
 
 
 
