--- a/publications.html
+++ b/publications.html
@@ -140,7 +140,7 @@
             </div>
 
 
-         <div class="row-fluid">
+         <div class="span8 offset1">
                <section id="conference">
                   <div class="page-header">
                      <h3>Conference Presentation</h3>
