--- a/publications.html
+++ b/publications.html
@@ -137,10 +137,22 @@
                   </section>
                   <hr>  
                </section> 
+            </div>            
+      </div>
+
+
+
+         <div class="row-fluid">
+            <div class="span3 bs-docs-sidebar" id="navparent">
+               <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
+                  <li><a href="#published"> Journal Publications</a></li>
+                  <li><a class="subhead" href="#2025"> 2025 </a></li> 
+                  <li><a class="subhead" href="#2024"> 2024 </a></li>  
+                  <li><a class="subhead" href="#2023"> 2023 </a></li>
+                  <li><a href="#conference">Conference Presentations</a></li>
+                  <li><a class="subhead" href="#2024_conf"> 2024 </a></li>                   
+               </ul>
             </div>
-
-
-
             <div class="span8 offset1">
                <section id="published">
                   <div class="page-header">
@@ -232,14 +244,9 @@
                   </section>
                   <hr>  
                </section> 
-            </div>
-
-            
+            </div>            
       </div>
-
-
-
-
+         
 
 
 
