--- a/publications.html
+++ b/publications.html
@@ -154,7 +154,7 @@
                </ul>
             </div>
             <div class="span8 offset1">
-               <section id="published">
+               <section id="conference">
                   <div class="page-header">
                      <h3>Conference Presentations</h3>
                   </div>
