--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="research.html">Research</a></li>
                         <li><a href="publications.html">Publications</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
