--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="people.html">People</a></li>
                         <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
+                        <li><a href="publications.html">Publications</a></li>     
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="news.html">News</a></li>
                         <li class="active" ><a href="#">Contact</a></li>
                      </ul>
