--- a/people.html
+++ b/people.html
@@ -25,7 +25,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="#">People</a></li>
                         <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
+                        <li><a href="publications.html">Publications</a></li>    
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
