--- a/publications.html
+++ b/publications.html
@@ -194,7 +194,7 @@
                   <a href="mailto:your.email@uni.edu">advaith[at]iitm[dot]ac[dot]in</a>
                </div>
                <div class="span2">
-                  <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
+                  <a href="https://www.iitm.ac.in/"><img src = "images/IIT_Madras_Logo.png" alt="iitm-logo"/></a>
                </div>
                <div class="span5">
                   <h3>Address</h3>
