--- a/news.html
+++ b/news.html
@@ -39,6 +39,24 @@
             <div class="row-fluid post_row">
                <div class="span6 post">
                   <div class="text">
+                     <h5><a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">A Solar Multi-Effect Desalination Success!</a></h5>
+                     <br/>
+                     <span class="date">May 07, 2025</span>
+                  </div>
+                  <div class="img">
+                     <a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">
+                     <img src="news/solar-desalination-success.jpeg" alt="A Solar Multi-Effect Desalination Success!">
+                     </a>
+                  </div>
+                  <div class="text">
+                     <p> About 97% of the available water on planet Earth is sea water, but only 2.5% of that is potable or usable for drinking. What if we could convert sea water into clean, potable water for drinking and other purposes? However, converting sea water into potable water is quite energy intensive. Now is the time to talk about the solar-driven energy-efficient sea water desalination system indigenously developed by IIT Madras. In India, over 90% of the land surface receives a significant amount of solar insolation. Byeffectively harvesting solar energy,sea water can be converted into potable water. </p>
+                  </div>
+                  <div class="author_box">
+                     <h6>Thilagan K.</h6>
+                  </div>
+               </div>
+               <div class="span6 post">
+                  <div class="text">
                      <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold</a></h5>
                      <br/>
                      <span class="date">January 21, 2025</span>
@@ -55,27 +73,8 @@
                      <h6>Vijayakumar S.</h6>
                   </div>
                </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="http://web.mit.edu">Eget Nulla: Posuere urna nec tincidunt praesent. Egestas sed sed risus pretium quam.</a></h5>
-                     <br/>
-                     <span class="date">January 4, 2018</span>                        
-                  </div>
-                  <div class="img">
-                     <a href="http://web.mit.edu">
-                     <img src="images/mit-spotlight1.png" alt="Eget Nulla: Posuere urna nec tincidunt praesent. Egestas sed sed risus pretium quam.">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Commodo ullamcorper a lacus vestibulum sed arcu non. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. </p>
-                     <br/>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Alissa L. Jacque</h6>
-                  </div>
-               </div>
             </div>
+            
             <div class="row-fluid post_row">
                <div class="span6 post">
                   <div class="text">
