--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
                      </a>
                   </div>
                   <div class="text">
-                     <p> About 97% of the available water on planet Earth is sea water, but only 2.5% of that is potable or usable for drinking. What if we could convert sea water into clean, potable water for drinking and other purposes? However, converting sea water into potable water is quite energy intensive. Now is the time to talk about the solar-driven energy-efficient sea water desalination system indigenously developed by IIT Madras. In India, over 90% of the land surface receives a significant amount of solar insolation. Byeffectively harvesting solar energy,sea water can be converted into potable water. </p>
+                     <p> About 97% of Earth's water is seawater, but only a small fraction is potable. IIT Madras has developed an indigenous, solar-driven, energy-efficient seawater desalination system, leveraging India's abundant solar insolation to sustainably produce clean drinking water. </p>
                   </div>
                   <div class="author_box">
                      <h6>Thilagan K.</h6>
